// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/widgets/loading/LoadingWrapper showing content with children 1`] = `
<Memo(LoadingWrapper)
  loading={false}
>
  text
</Memo(LoadingWrapper)>
`;

exports[`components/widgets/loading/LoadingWrapper showing content without children 1`] = `
<Memo(LoadingWrapper)
  loading={false}
/>
`;

exports[`components/widgets/loading/LoadingWrapper showing spinner with text 1`] = `
<Memo(LoadingWrapper)
  loading={true}
  text="test"
>
  <Memo(LoadingSpinner)
    text="test"
  >
    <span
      className="LoadingSpinner with-text"
      data-testid="loadingSpinner"
      id="loadingSpinner"
    >
      <span
        className="fa fa-spinner fa-fw fa-pulse spinner"
        title="Loading Icon"
      />
      test
    </span>
  </Memo(LoadingSpinner)>
</Memo(LoadingWrapper)>
`;

exports[`components/widgets/loading/LoadingWrapper showing spinner without text 1`] = `
<Memo(LoadingWrapper)
  loading={true}
>
  <Memo(LoadingSpinner)
    text={null}
  >
    <span
      className="LoadingSpinner"
      data-testid="loadingSpinner"
      id="loadingSpinner"
    >
      <span
        className="fa fa-spinner fa-fw fa-pulse spinner"
        title="Loading Icon"
      />
    </span>
  </Memo(LoadingSpinner)>
</Memo(LoadingWrapper)>
`;
